discussion/kv_engine/145864/145864_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-44140: Make getDroppedCollections return status

Change-Id: Ib239bf424b42d039ba164732c1ee61737348d322

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-02-18 07:33:24.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-02-18 07:53:48.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7165/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20: error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool" [clang-diagnostic-error]
            return false;
                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7165/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20:
error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7165/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33680/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(1511): error C2440: "return": cannot convert from "bool" to "CouchKVStore::CompactDBInternalStatus" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33680/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28961/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20:
error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28961/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7812/ : FAILURE

Compile error at [2021-02-18T07:36:33.365Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20:
error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7812/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8759/ : FAILURE

Compile error at [2021-02-18T07:43:34.471Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20:
error: cannot convert ?bool? to ?CouchKVStore::CompactDBInternalStatus? in return
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8759/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8897/ : FAILURE

Compile error at [2021-02-18T07:40:53.533Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20:
error: cannot convert ?bool? to ?CouchKVStore::CompactDBInternalStatus? in return
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8897/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9105/ : FAILURE

Compile error at [2021-02-18T07:43:11.311Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20:
error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9105/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16658/ : FAILURE

Compile error at [2021-02-18T07:45:43.292Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20:
error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16658/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5702/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
